<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/topImage"
        android:src="@drawable/img"
        android:contentDescription="@string/TopImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TopImgStyle" />

    <TextView
        android:id="@+id/WelcomeText"
        android:text="@string/WelcomeText"
        android:contentDescription="@string/WelcomeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topImage"
        tools:ignore="TextSizeCheck"
        style="@style/WelcomeStyle" />


    <TextView
        android:id="@+id/SignInText"
        android:contentDescription="@string/SignLabel"
        android:text="@string/SignLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WelcomeText"
        tools:ignore="TextSizeCheck"
        style="@style/SignInTextStyle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/EnterEmail"
        app:endIconDrawable="@drawable/mail"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/grey"
        app:endIconMode="custom"
        app:errorTextAppearance="@style/ErrorTextStyle"
        app:layout_constraintTop_toBottomOf="@id/SignInText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        app:endIconDrawable="@drawable/lock"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/grey"
        app:endIconMode="custom"
        app:errorTextAppearance="@style/ErrorTextStyle"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberMeCheckbox"
        android:text="@string/CheckBox"
        app:layout_constraintStart_toStartOf="@id/passwordInput"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        style="@style/RememberCheckBoxStyle" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:text="@string/ForgetPass"
        app:layout_constraintEnd_toEndOf="@id/passwordInput"
        app:layout_constraintTop_toTopOf="@id/rememberMeCheckbox"
        style="@style/ForgetPasswordStyle" />

    <Button
        android:id="@+id/nextButton"
        android:text="@string/ButtonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rememberMeCheckbox"
        style="@style/NextButtonStyle" />

    <TextView
        android:id="@+id/newMemberText"
        android:text="@string/NewMember"
        app:layout_constraintEnd_toStartOf="@id/RegisterNowText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nextButton"
        style="@style/NewMemberTextStyle" />

    <TextView
        android:id="@+id/RegisterNowText"
        android:text="@string/RegisterNow"
        app:layout_constraintStart_toEndOf="@id/newMemberText"
        app:layout_constraintTop_toTopOf="@id/newMemberText"
        style="@style/RegisterNowTextStyle" />


</androidx.constraintlayout.widget.ConstraintLayout>